Improved objective, and tweaked UA5 leadership lines.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section class="summary clearfix">
             <h2>Objective</h2>
-            To find an engaging opportunity providing superior quality solutions involving PHP, MySql, Node.js, Javascript, jQuery, HTML, and CSS where I am able to continue implementing cutting edge technologies and advancing the abilities of those around me.
+            To find a senior or leadership role in an innovative company, focused on bringing superior quality solutions to the web. Roles utilizing PHP, Node.js, Javascript (jQuery, Backbone, etc.) and MySQL are preferred, but the team, and the product, both outweigh any technology.
         </section>
 
         <section class="resume-section">
@@ -54,7 +54,8 @@
 
                     <ul class="p-summary">
                         <li>Helped grow company from 4 to 18 people.</li>
-                        <li>Instituted an environment of knowledge sharing and education to build team's abilities.</li>
+                        <li>Instituted an environment of knowledge sharing where education became a priority which led to building the team's abilities.</li>
+                        <li>Increased company's profile as a though leader through hosting Meetup groups and presenting at conferences.</li>
                         <li>Architected and oversaw development of majority of projects.</li>
                         <li>Implemented PHP and Javascript code on critical projects, including an affiliate advertising network backend that received over 110 million requests a week and a custom CMS for Prudential's <a href="http://www.bringyourchallenges.com/">BringYourChallenges.com</a> campaign.</li>
                         <li>Lead development education and prototyping sessions for Google's <a href="http://www.artcopycode.com/campaign/art-copy-code">Art, Copy & Code</a>, a program that  explores technology-led approaches to storytelling and customer engagement in the digital age for advertising companies representing such as Macy's, eSurance, and Doritos.</li>
