Clarify that ACC workshops were a series.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li>Increased company's profile as a thought leader through hosting Meetup groups and presenting at conferences.</li>
                         <li>Architected and oversaw development of majority of projects.</li>
                         <li>Implemented PHP and Javascript code on critical projects, including an affiliate advertising network API that received over 110 million requests per week.</li>
-                        <li>Led education and prototyping sessions for Google's <a href="http://www.artcopycode.com/campaign/art-copy-code">Art, Copy & Code</a> program for advertising agencies. This workshop explores a technology-led approach to storytelling with clients such as Macy's, eSurance, and Doritos.</li>
+                        <li>Led education and prototyping sessions for Google's <a href="http://www.artcopycode.com/campaign/art-copy-code">Art, Copy & Code</a> program for advertising agencies. This workshop series explores a technology-led approach to storytelling with clients such as Macy's, eSurance, and Doritos.</li>
                         <li>Increased code quality and the team's abilities through the introduction of Github, Pull Requests, peer review, and an environment of knowledge sharing.</li>
                         <li>Streamlined the development process by improving tool chains and workflows.</li>
                         <li>
